--- a/index.css
+++ b/index.css
@@ -18,7 +18,8 @@ body {
     background-size: cover;
     padding: 15px;
     align-items: center;
-    margin: 30px;
+    margin: 30px 80px;
+    height: 100%;
     align-items: center;
 }
 .form {
@@ -44,7 +45,7 @@ h4 {
 }
 .button {
     background-color: #ffe78f;
-    padding: 7px;
+    padding: 5px;
     margin: 10px 5px 5px 5px;
     font-weight: bold;
     border-radius: 5px;
@@ -62,7 +63,7 @@ h4 {
     transform: translateY(3px);
 }
 #js-word {
-    height: 23px;
+    height: 25px;
     border: 1px solid grey;
     font-family: 'Frank Ruhl Libre', serif;
 }
@@ -86,11 +87,11 @@ h4 {
 }
 @media only screen and (min-width: 1025px){ /*desktop*/ 
 #js-word {
-    width: 185px;
-    height: 40px;
+    width: 15px;
+    height: 50%;
     font-size: 18px;
     margin: 5px;
-}
+} 
 .srcButton {
     height: 40px;
     width: 80px;
@@ -98,30 +99,32 @@ h4 {
     border: none;
 }
 .container {
-    margin: 40px;
+    width: 50%;
 }
 }
 
-@media only screen and (max-width: 1025px) { /*tablet*/
+@media only screen and (min-width: 768px) { /*tablet*/
 
 #js-word {
-    width: 300px;
-    height: 50px;
+    width: 50%;
+    height: 40px;
     font-size: 18px;
 }
 .srcButton {
-    height: 50px;
+    height: 40px;
     width: 100px;
     font-size: 16px;
 }
 .container {
     background-size: cover;
     width: 70%; 
+    margin-top: 10%;
+    padding: 40px;
 }
 .button {
-    width: 40%;
-    height: 50px;
-    font-size: 18px;
+    width: 35%;
+    height: 40px;
+    font-size: 14px;
     margin-top: 20px;
 }
 }
