--- a/index.css
+++ b/index.css
@@ -31,6 +31,11 @@ h1 {
 h4 {
     color: #ff5722;
 }
+p {
+    font-size: 12px;
+    margin-top: 0;
+    /* color: gray; */
+}
 .block {
     color: #206a5d;
     font-weight: bold;
