--- a/index.css
+++ b/index.css
@@ -20,6 +20,8 @@ body {
     align-items: center;
     margin: 30px 80px;
     height: 100%;
+    width: 80%;
+    
     align-items: center;
 }
 .form {
