--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ body {
     background-size: cover;
     padding: 15px;
     align-items: center;
-    margin: 30px 80px;
+    margin: 30px 50px;
     height: 100%;
     width: 80%;
     
@@ -36,7 +36,6 @@ h4 {
 .example {
     font-size: 12px;
     margin-top: 0;
-    /* color: gray; */
 }
 .block {
     color: #206a5d;
@@ -73,15 +72,23 @@ h4 {
     height: 25px;
     border: 1px solid grey;
     font-family: 'Frank Ruhl Libre', serif;
+    border: 1px solid;
 }
 .SynonymsAntonymsDiv {
     display: none;
 }
 #textToSpeech {
     font-family: 'Frank Ruhl Libre', serif;
+    border: 1px solid;
+}
+#textToSpeechDiv {
+    text-align: center;
 }
 #voiceSelectionDDL {
     font-family: 'Frank Ruhl Libre', serif;
+    width: 80%;
+    max-width: 100%;
+    border: 1px solid;
 }
 .block{
     display: block;
@@ -99,6 +106,9 @@ h4 {
     font-size: 18px;
     margin: 5px;
 } 
+#textToSpeech {
+    width: 80%;
+}
 .srcButton {
     height: 40px;
     width: 80px;
